Fix scrolling issues on mobile's nav

--- a/source/_components/_about/_about.sass
+++ b/source/_components/_about/_about.sass
@@ -38,3 +38,8 @@
       max-width: 300px
       width: 100%
       height: 100%
+
+  @media (max-width: 700px)
+    .about__Text
+      img
+        display: none
