--- a/source/_style/_partials/_global.sass
+++ b/source/_style/_partials/_global.sass
@@ -15,6 +15,10 @@ body
   color: $darkColor
   font-family: 'Roboto', sans-serif
 
+  &.stopScrolling
+    height: 100%
+    overflow: hidden
+
 .flex
   display: flex
 
